--- a/app/views/cliente/formulario_semestral.html.erb
+++ b/app/views/cliente/formulario_semestral.html.erb
@@ -35,7 +35,7 @@
                    
 
                     <div class="text-end">
-                        <button type="submit" class="btn btn-primary">Salvar</button>
+                        <button type="submit" class="btn btn-primary">Adicionar</button>
                     </div>
                 </form>
             </div>
