--- a/app/views/cliente/formulario_mensal_seac.html.erb
+++ b/app/views/cliente/formulario_mensal_seac.html.erb
@@ -1,67 +1,62 @@
  <div class="container mt-5">
 
-<form>
-<div class="row g-2">
-  <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="UF" value="uf">
-      <label for="floatingInputGrid">uf</label>
-    </div>
-  </div>
-    <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Cidade" value="cidade">
-      <label for="floatingInputGrid">Cidade</label>
-    </div>
-  </div>
-  <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Tipo de Cliente" value="tipodecliente">
-      <label for="floatingInputGrid">Tipo de cliente</label>
-    </div>
-  </div>
+<h3><strong>Dados de Acesso - SCM</strong></h3>
 
-  <div class="col-md">
-    <div class="form-floating">
-      <select class="form-select" id="floatingSelectGrid" aria-label="Tipo de Atendimento">
-        <option selected>SCM</option>
-        <option value="1">SEAC</option>
-        <option value="2">STFC</option>
-        
-      </select>
-      <label for="floatingSelectGrid">Selecione o tipo</label>
-    </div>
-  </div>
-    <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Tipo de Meio" value="tipodemeio">
-      <label for="floatingInputGrid">Tipo de Meio</label>
-    </div>
-  </div>
- 
-   
-    <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Código Ibge" value="codigoibge">
-      <label for="floatingInputGrid">Código IBGE</label>
-    </div>
-  </div>
-   <div class="col-md">
-    <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInputGrid" placeholder="Quantidade" value="quantidade">
-      <label for="floatingInputGrid">Quantidade</label>
-    </div>
-  </div>
-  <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">Salvar</button>
-  
-  
-  <div class="text-end">
-                        <button type="submit" class="btn btn-primary">Salvar</button>
+       
+       
+            <div class="card-body">
+                <form>
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="uf" class="form-label">UF</label>
+                            <select id="uf" class="form-select">
+                                <option selected>Escolher...</option>
+                                <option value="SP">São Paulo</option>
+                                <option value="RJ">Rio de Janeiro</option>
+                                <!-- Adicione mais opções conforme necessário -->
+                            </select>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="cidade" class="form-label">Cidade</label>
+                            <input type="text" class="form-control" id="cidade" placeholder="Digite a cidade">
+                        </div>
                     </div>
- </form> 
-  
-  
-  
-  
- </div>
-</div>
+
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="tipoCliente" class="form-label">Tipo de Cliente</label>
+                            <input type="text" class="form-control" id="tipoCliente" placeholder="Digite o tipo de cliente">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="tipoAtendimento" class="form-label">Tipo de Atendimento</label>
+                            <input type="text" class="form-control" id="tipoAtendimento" placeholder="Digite o tipo de atendimento">
+                        </div>
+                    </div>
+
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="tipoMeio" class="form-label">Tipo de Meio</label>
+                            <input type="text" class="form-control" id="tipoMeio" placeholder="Digite o tipo de meio">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="codigoIbge" class="form-label">Código IBGE</label>
+                            <input type="text" class="form-control" id="codigoIbge" placeholder="Digite o código IBGE">
+                        </div>
+                    </div>
+
+                  
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="quantidade" class="form-label">Quantidade</label>
+                            <input type="number" class="form-control" id="quantidade" placeholder="Digite a quantidade">
+                        </div>
+                     
+                    </div>
+
+                    <div class="text-end">
+                        <button type="submit" class="btn btn-primary">Adicionar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
