--- a/app/views/cliente/formulario_mensal_scm.html.erb
+++ b/app/views/cliente/formulario_mensal_scm.html.erb
@@ -67,7 +67,7 @@
                     </div>
 
                     <div class="text-end">
-                        <button type="submit" class="btn btn-primary">Salvar</button>
+                        <button type="submit" class="btn btn-primary">Adicionar</button>
                     </div>
                 </form>
             </div>
