--- a/app/views/coletamensal/fazeruf.html.erb
+++ b/app/views/coletamensal/fazeruf.html.erb
@@ -1,4 +1,4 @@
-<div class="container-md">
+<div class="container-md d-flex justify-content-center align-items-center" style="height: 100vh;">
 
     <%= form_for @coleta, url: coleta_mensal_fazercidadesuf_path, :html => {:id => "formColeta"} do |f| %>
         <%= f.hidden_field :mes, :value => @coleta.mes %>
@@ -10,11 +10,9 @@
           <div class="box-title"><%= @coleta.tipoColeta %></div>
 
 
-           <div class="container">
-              <div class="row">
-                <div class="col-md-4">
-                  <div class="form-group">
-                     <p><%= f.label :uf, "Selecione a UF" %></p>
+           <div class="row mb-3">
+               <div class="col-md-6">
+                    <p><%= f.label :uf, "Selecione a UF" %></p>
                     <% listaSelectUf = [] %>
                     <% listaSelectUf << ["Selecione", "" ] %>
                     <% listaSelectMunicipio = [] %>
@@ -27,30 +25,34 @@
     
     
                     <p><%= f.select :uf, options_for_select(listaSelectUf) {}, {:selected => "Selecione uma UF"}, class:'form-select' %></p>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="form-group">
-                    <p><%= f.label :cidade, "Cidade", class: "form-label" %></p>
-                     <p><%= f.text_field :cidade, class: "form-control", id: "cidade", placeholder: "Selecione um valor para o campo UF", disabled: true %></p>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="form-group">
-                     <p><%= f.label :codigoIBGE, "Código IBGE", class: "form-label" %></p>
-                     <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Selecione um valor para o campo UF", disabled: true %></p>
-                  </div>
-                </div>
-
-               <div class="row mb-3">
-                <div class="col-md-6">
-                 <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary btn-lg  text-white' %>
-
-                </div>
+               </div>
              </div>
 
+             <div class="row mb-3">
+               <div class="col-md-6">
+                     <p><%= f.label :cidade, "Cidade", class: "form-label" %></p>
+                      <p><%= f.text_field :cidade, class: "form-control", id: "cidade", placeholder: "Selecione um valor para o campo UF", disabled: true %></p>
+               </div>
              </div>
-            </div>
+
+             <div class="row mb-3">
+               <div class="col-md-6">
+                  <p><%= f.label :codigoIBGE, "Código IBGE", class: "form-label" %></p>
+                  <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Selecione um valor para o campo UF", disabled: true %></p>
+               </div>
+             </div>
+
+                <div class="row mb-3">
+                       
+                        <div class="col-md-6">
+                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-primary' %>
+
+                        </div>
+                      </div>
+  
+
+           </div>
+         </div>
 
            
             
