--- a/app/views/coletamensal/_fazer_scm.html.erb
+++ b/app/views/coletamensal/_fazer_scm.html.erb
@@ -17,7 +17,7 @@
                       <div class="row mb-3">
                          <div class="col-md-6">
                               <p><%= f.label :cnpj, "CNPJ", class: "form-label" %></p>
-                               <p><%= f.text_field :cnpj, class: "form-control", id: "cnpj", placeholder: "Digite o CNPJ da Prestadora", required: true, maxlength: 14 %></p>
+                               <p><%= f.text_field :cnpj, class: "form-control", id: "cnpj", placeholder: "Digite o CNPJ sem pontos", required: true, maxlength: 14 %></p>
                          </div>
                       </div>
 
